hello/helloingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  labels:
    app: hello-world
  annotations:
    ingress.bluemix.net/appid-auth: "bindSecret=binding-<appid service instance name> namespace=default requestType=web serviceName=hello-service,hello-frontend-service"
  namespace: <k8s namespace>
spec:
  rules:
  - host: <cluster name>.<region>.containers.appdomain.cloud
    http:
      paths:
      - path: /api
        backend:
          serviceName: hello-service
          servicePort: 8080
      - path: /hello
        backend:
          serviceName: hello-frontend-service
          servicePort: 8080
  tls:
  - secretName: <secret name> 
    hosts:
    - <cluster name>.<region>.containers.appdomain.cloud
